FIX: color box <input type=color> size
trying to drag on the bottom of the colors box selected colors instead
because the color input was too big

--- a/layout.css
+++ b/layout.css
@@ -99,6 +99,12 @@ html, body, .jspaint {
 	height: 15px;
 	border: 0;
 }
+.jspaint-color-button input {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
 
 
 .jspaint-canvas-area {
